<resources>
    <string name="app_name">Soulmate</string>

    <string name="fcm_web_api_key">AIzaSyAR1tt2QN9gmILRobdDsV8qzZfth3FJZgw</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="email">Email</string>
    <string name="username_email">Username/Email</string>
    <string name="passowrd">Password</string>
    <string name="login">LOGIN</string>
    <string name="show_pwd">Show Password</string>
    <string name="hide_pwd">Hide Password</string>
    <string name="forgot">Forgot password?</string>
    <string name="closebutton">Close Button for Activity</string>
    <string name="newUser">Don\'t have an account? Sign Up here.</string>
    <string name="fullName">Name</string>
    <string name="mobileNumber">Mobile Number</string>
    <string name="user_name">Username</string>
    <string name="confirmPassword">Confirm Password</string>
    <string name="terms_conditions">I agree on Terms and Conditions.</string>
    <string name="signUp">SIGN UP</string>
    <string name="signUpWithFb">SIGN UP WITH FACEBOOK</string>
    <string name="already_user">Already have Account? Login here.</string>
    <string name="registered_emailid">Please enter your Registered Email below:</string>
    <string name="search_soulmate">Search your soulmate</string>
    <string name="submit">RECOVER</string>
    <string name="search">Email/Username/Phone</string>
    <string name="back">BACK</string>
    <string name="title_activity_chat">Chat</string>
    <string name="title_activity_main">Home</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_account">Account</string>
    <string name="title_soulmates">Soulmates</string>
    <string name="title_search">Search</string>
    <string name="add_soulmate">Add soulmates to start chatting</string>
    <string name="no_notification">Your notifications will appear here</string>
    <string name="accout_info">Your account information will apear here</string>
    <string name="no_chat">No chat yet</string>
    <string name="title_activity_profile">Profile</string>
    <string name="action_edit">Edit</string>
    <string name="action_add">Add</string>
    <string name="action_remove">Remove</string>
    <string name="action_block">Block</string>
    <string name="action_relation">Relation</string>
    <string name="signin">SIGN IN</string>
    <string name="logout_title">
        Are you sure?\n\n
        You will not receive any messages from your soulmates.
        They will miss you a lot.
        Think again.
    </string>
    <string name="action_clear_chat">Clear Chat</string>
    <string name="action_change_wallpaper">Wallpaper</string>
    <string name="action_view_profile">View profile</string>
    <string name="action_msg_block">Message block</string>
    <string name="action_list">List view</string>
    <string name="action_grid">Grid view</string>
    <string name="action_extended_list">Extended list</string>

    <string name="title_activity_greetings">Greetings</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>

    <string name="app_icon_transition">app_icon_transition</string>
    <string name="app_title_transition">app_title_transition</string>
    <string name="loading_icon_transition">loading_icon_transition</string>
</resources>
