<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.project.blackspider.quarrelchat.Activities.ProfileActivity">
    <item
        android:id="@+id/action_add"
        android:orderInCategory="100"
        android:title="@string/action_add"
        android:icon="@drawable/ic_add_soulmate_white_24dp"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_view_profile"
        android:orderInCategory="100"
        android:title="@string/action_view_profile"
        android:icon="@drawable/ic_account_circle_black_24dp"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_relation"
        android:orderInCategory="100"
        android:title="@string/action_relation"
        android:icon="@drawable/ic_love_half_black_24dp"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_msg_block"
        android:orderInCategory="100"
        android:title="@string/action_msg_block"
        android:icon="@drawable/ic_block_black_24dp"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_clear_chat"
        android:orderInCategory="100"
        android:title="@string/action_clear_chat"
        android:icon="@drawable/ic_notification_cleaner_black_24dp"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_change_wallpaper"
        android:orderInCategory="100"
        android:title="@string/action_change_wallpaper"
        android:icon="@drawable/ic_wallpaper_black_24dp"
        app:showAsAction="never" />
</menu>
