<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.project.blackspider.quarrelchat.Activities.ProfileActivity">
    <item
        android:id="@+id/action_list"
        android:orderInCategory="100"
        android:title="@string/action_list"
        android:icon="@drawable/ic_list_black_24dp"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_grid"
        android:orderInCategory="100"
        android:title="@string/action_grid"
        android:icon="@drawable/ic_grid_black_24dp"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_extended_list"
        android:orderInCategory="100"
        android:title="@string/action_extended_list"
        android:icon="@drawable/ic_extended_list_black_24dp"
        app:showAsAction="never" />
</menu>
