<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color"
    tools:context="com.project.blackspider.quarrelchat.Activities.GreetingsActivity">

    <!-- The primary full-screen view. This can be replaced with whatever view
         is needed to present your content, e.g. VideoView, SurfaceView,
         TextureView, etc. -->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <ImageView
            android:id="@+id/fullscreen_content"
            android:layout_width="250dp"
            android:layout_height="200dp"
            android:layout_marginBottom="-45dp"
            android:layout_centerHorizontal="true"
            android:layout_above="@+id/app_title"
            android:keepScreenOn="true"
            android:transitionName="@string/app_icon_transition"
            tools:ignore="UnusedAttribute" />

        <com.project.blackspider.quarrelchat.CustomView.SimpleLoveTextView
            android:id="@+id/app_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/app_name"
            android:textSize="35sp"
            android:visibility="visible"
            android:textColor="@color/text_white"
            android:transitionName="@string/app_title_transition"
            tools:ignore="UnusedAttribute"/>

        <ImageView
            android:id="@+id/loading_gif"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:scaleType="centerInside"
            android:layout_centerHorizontal="true"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="55dp"
            android:keepScreenOn="true"
            android:transitionName="@string/loading_icon_transition"
            tools:ignore="UnusedAttribute" />
    </RelativeLayout>

    <!-- This FrameLayout insets its children based on system windows using
         android:fitsSystemWindows. -->
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true">

        <LinearLayout
            android:id="@+id/fullscreen_content_controls"
            style="?metaButtonBarStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|center_horizontal"
            android:background="@color/transparent_100"
            android:orientation="horizontal"
            tools:ignore="UselessParent">
        </LinearLayout>
    </FrameLayout>

</FrameLayout>
